--- a/templates/room.html
+++ b/templates/room.html
@@ -22,7 +22,12 @@
 
             <div class="column is-6 is-offset-3">
               <div class="box">     
-                <div id="chat-messages">
+                <div id="chat-messages" style="max-height: 300px; overflow-y: scroll;">
+                    
+                        {% for m in messages %}
+                            <b>{{ m.username }}</b>: {{ m.content }}<br>
+                        {% endfor %}
+                    
                 </div>
               </div>
 
@@ -48,7 +53,12 @@
     {{ username|json_script:"json-username" }}
 
     <script>
+        function scrollToBottom() {
+            let objDiv = document.getElementById("chat-messages")
+            objDiv.scrollTop = objDiv.scrollHeight;
+        }
         
+        scrollToBottom();
 
         const roomName = JSON.parse(document.getElementById('json-roomname').textContent);
         const userName = JSON.parse(document.getElementById('json-username').textContent);
@@ -60,31 +70,25 @@
             + roomName
             + '/'
         );
+        console.log("sdfasdf",window.location.host)
 
         chatSocket.onmessage = function(e) {
             console.log('onMessage');
+
+            const data = JSON.parse(e.data);
+
+            if (data.message) {
+                document.querySelector('#chat-messages').innerHTML += ('<b>'+ data.username + '</b>: ' + data.message + '<br>');
+            } else {
+                alert ('the massage is empty ')
+            }
         };
 
         chatSocket.onclose = function(e) {
-            console.error('The socket closed unexpectedly');
+            console.error('The socket closed unexpectedly',e);
         };
 
-        chatSocket.onmessage = function(e) {
-            const data = JSON.parse(e.data);
-          
-            if (data.message) {
-              document.querySelector('#chat-messages').innerHTML += ('' + data.username + ': ' + data.message + '');
-            } else {
-              alert('The message was empty!')
-            }
-        };
-
-        document.querySelector('#chat-message-input').focus();
-        document.querySelector('#chat-message-input').onkeyup = function(e) {
-        if (e.keyCode === 13) {
-                document.querySelector('#chat-message-submit').click();
-            }
-        };
+        
 
         document.querySelector('#chat-message-submit').onclick = function(e) {
             const messageInputDom = document.querySelector('#chat-message-input');
