--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -8,7 +8,7 @@
         <div class="login-center-portion secondary-background card padding-50 dis-col gap-10">
             <div class="algn-cent dis-col text-color gap-10">
                 <span class="welcome text-weight-700">WELCOME</span>
-                <span class="brand-color text-weight-400 brand-text">ConnectionHub</span>
+                <span class="brand-color text-weight-400 brand-text">Skill Up lab</span>
             </div>
             <form class="dis-col gap-10 algn-cent just-cent" id="register-form" method="post" action="">
                 <span class="sign-in-text text-color">Sign In</span>
