--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -16,7 +16,7 @@
                     <label for="home-icon">Home</label>
                 </div>
             </a>
-            <a href="{% url 'admin_users' %}">
+            {% comment %} <a href="{% url 'admin_users' %}"> {% endcomment %}
                 <div id="users-icon" class="left-bar-elements accent-two-bg dis-row gap-20">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <path d="M9.16006 10.87C9.06006 10.86 8.94006 10.86 8.83006 10.87C6.45006 10.79 4.56006 8.84 4.56006 6.44C4.56006 3.99 6.54006 2 9.00006 2C11.4501 2 13.4401 3.99 13.4401 6.44C13.4301 8.84 11.5401 10.79 9.16006 10.87Z" stroke="#F2F2F2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -27,7 +27,7 @@
                     <label for="users-icon">Users</label>
                 </div>
             </a>
-            <a href="{% url 'admin-report-page' %}">
+            {% comment %} <a href="{% url 'admin-report-page' %}"> {% endcomment %}
                 <div id="report-icon" class="left-bar-elements accent-two-bg dis-row gap-20">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <path d="M12 9V14" stroke="#F2F2F2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -37,7 +37,7 @@
                     <label for="report-icon">Reports</label>
                 </div>
             </a>
-            <a href="{% url 'admin-messages-page' %}">
+            {% comment %} <a href="{% url 'admin-messages-page' %}"> {% endcomment %}
                 <div id="messages-icon" class="left-bar-elements accent-two-bg dis-row gap-20">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <path d="M22 6.25V11.35C22 12.62 21.58 13.69 20.83 14.43C20.09 15.18 19.02 15.6 17.75 15.6V17.41C17.75 18.09 16.99 18.5 16.43 18.12L15.46 17.48C15.55 17.17 15.59 16.83 15.59 16.47V12.4C15.59 10.36 14.23 9 12.19 9H5.39999C5.25999 9 5.13 9.01002 5 9.02002V6.25C5 3.7 6.7 2 9.25 2H17.75C20.3 2 22 3.7 22 6.25Z" stroke="#F2F2F2" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -46,7 +46,7 @@
                     <label for="messages-icon">Messages</label>
                 </div>
             </a>
-            <a href="{% url 'admin-logout' %}">
+            <a href="{% url 'admin_logout' %}">
                 <div id="logout-icon" class="left-bar-elements accent-two-bg dis-row gap-20">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <path d="M8.90002 7.55999C9.21002 3.95999 11.06 2.48999 15.11 2.48999H15.24C19.71 2.48999 21.5 4.27999 21.5 8.74999V15.27C21.5 19.74 19.71 21.53 15.24 21.53H15.11C11.09 21.53 9.24002 20.08 8.91002 16.54" stroke="#F2F2F2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
