admin home page

--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -5,7 +5,7 @@
     <div class="dis-row">
         <div class="dis-col left-bar secondary-background just-cent gap-20">
             <div class="left-bar-logo">
-                <img style="width: 40%; height: 100%" src="{% static 'logo/logo.svg' %}" alt="logo of connectionhub">
+                <img style="width: 40%; height: 100%" src="{% static 'logo/logo.jpg' %}" alt="logo of connectionhub">
             </div>
             <a href="{% url 'admin_home' %}">
                 <div id="home-icon" class="left-bar-elements accent-two-bg dis-row gap-20">
