--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -12,7 +12,7 @@ Admin Panel
         {% for analytic in analytics %}
         <div class="dis-row just-sb">
             <span>{{ analytic.title }}</span>
-            <span>-</span>
+            <span>---</span>
             <span>{{ analytic.value }}</span>
         </div>
         {% endfor %}
