--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="shortcut icon" href="{% static 'logo/logo.png' %}" type="image/x-icon">
-    <link rel="icon" href="{% static 'logo/logo.png' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'logo/logo.jpg' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'logo/logo.jpg' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
     <link rel="stylesheet" href="{% static 'styles/global-datas.css' %}">
     <link rel="stylesheet" href="{% static 'styles/large-screens.css' %}" media="(min-width: 992px)">
