--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -16,7 +16,7 @@
                     <label for="home-icon">Home</label>
                 </div>
             </a>
-            {% comment %} <a href="{% url 'admin_users' %}"> {% endcomment %}
+            <a href="{% url 'admin_users' %}">
                 <div id="users-icon" class="left-bar-elements accent-two-bg dis-row gap-20">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <path d="M9.16006 10.87C9.06006 10.86 8.94006 10.86 8.83006 10.87C6.45006 10.79 4.56006 8.84 4.56006 6.44C4.56006 3.99 6.54006 2 9.00006 2C11.4501 2 13.4401 3.99 13.4401 6.44C13.4301 8.84 11.5401 10.79 9.16006 10.87Z" stroke="#F2F2F2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
