--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -27,14 +27,14 @@
                     <label for="users-icon">Users</label>
                 </div>
             </a>
-            {% comment %} <a href="{% url 'admin-report-page' %}"> {% endcomment %}
+            <a href="{% url 'admin_tutors' %}">
                 <div id="report-icon" class="left-bar-elements accent-two-bg dis-row gap-20">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <path d="M12 9V14" stroke="#F2F2F2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                         <path d="M12.0001 21.41H5.94005C2.47005 21.41 1.02005 18.93 2.70005 15.9L5.82006 10.28L8.76006 5.00003C10.5401 1.79003 13.4601 1.79003 15.2401 5.00003L18.1801 10.29L21.3001 15.91C22.9801 18.94 21.5201 21.42 18.0601 21.42H12.0001V21.41Z" stroke="#F2F2F2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                         <path d="M11.9945 17H12.0035" stroke="#F2F2F2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                     </svg>
-                    <label for="report-icon">Reports</label>
+                    <label for="report-icon">Tutors</label>
                 </div>
             </a>
             {% comment %} <a href="{% url 'admin-messages-page' %}"> {% endcomment %}
