--- a/templates/admin_tutor_small_data.html
+++ b/templates/admin_tutor_small_data.html
@@ -1,4 +1,4 @@
-<a href="{% url 'tutor_profile' name=tutor.name %}">
+<a href="{% url 'tutor_profile' pk=tutor.pk %}">
     <div class="dis-row gap-10">
         <div class="small-avatar">
 
