--- a/templates/admin_tutor_profile.html
+++ b/templates/admin_tutor_profile.html
@@ -5,6 +5,7 @@
 
 {% block content %}
     <div class="width-max admin-user-data gap-10">
+      
         <div class="posts-area gap-20 dis-col">
             <div class="gap-20 dis-col">
                 {% for post in user.posts %}
@@ -151,6 +152,18 @@
                 </svg>
                 <span>Is banned: {% if user.banned %}Yes{% else %}No{% endif %}</span>
             </div>
+
+            <div class="block-actions">
+                  <form method="post" action="{% url 'block_tutor' pk=tutor.pk %}">
+                    {% csrf_token %}
+                    {% if tutor.is_block %}
+                    <button type="submit" class="btn btn-success"style="background-color:yellow;cursor: pointer;">Unblock Tutor</button>
+                    {% else %}
+                    <button type="submit" class="btn btn-danger" style="background-color:red; cursor: pointer;">Block Tutor</button>
+                    {% endif %}
+                  </form>
+            </div>
+
         </section>
     </div>
 {% endblock %}
