--- a/templates/admin_user.html
+++ b/templates/admin_user.html
@@ -5,9 +5,17 @@
 
 {% block content %}
 <div class="width-max padding-20 dis-col">
-    <h1 class="text-color">Users</h1>
+    <h1 class="text-color">All Users</h1>
     <div class="users-list">
         {% for user in users %}
+        <div class="secondary-background padding-10 card">
+            {% include 'admin_user_small_data.html' with user=user %}
+        </div>
+        {% endfor %}
+    </div>
+    <h1 class="text-color">Admins</h1>
+    <div class="users-list">
+        {% for user in admins %}
         <div class="secondary-background padding-10 card">
             {% include 'admin_user_small_data.html' with user=user %}
         </div>
